<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_priority_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="7dp"
            android:text="@string/priority_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:alpha="0.8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/edit_button_description"
            android:gravity="center"
            app:elevation="10dp"
            app:icon="@drawable/ic_baseline_edit_24"
            app:iconGravity="textEnd"
            app:iconTint="@color/gray"
            app:layout_constraintBottom_toTopOf="@id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:alpha="0.8"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cross_image_content_descriptioon"
            android:gravity="center"
            app:elevation="10dp"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textEnd"
            app:iconTint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnEdit"
            app:layout_constraintBottom_toBottomOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>